# healthcare-predictive-model-eu

./: .gitignore  README.md  README_ca.md  README_es.md  etl.ipynb  etl.py  example_model_results.xlsx  main_gui.ipynb  modelitza.ipynb  modelitza.py  mvm_eines.py  predict.ipynb  predict.py  pyproject.toml  requirements.txt
