[project]
name = "eurostat-mortality-predictor"
version = "0.1.0"
description = "Predictive model for mortality causes in European NUTS regions using Eurostat data and machine learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "ipyfilechooser>=0.6.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pooch>=1.9.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "xgboost>=3.2.0",
    "xlsxwriter>=3.2.9",
]
